--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,6 +7,11 @@
             "label": "Clear test results",
             "type": "shell",
             "command": "powershell \"rm -r tests/output_images\""
+        },
+        {
+            "label": "Make R.py",
+            "type": "shell",
+            "command": "python ./tools/make_resources.py"
         }
     ]
 }
