feat(core): 用于展示检测结果的可视化调试页面

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,6 +19,14 @@
             "request": "launch",
             "console": "integratedTerminal",
             "module": "${command:extension.commandvariable.file.relativeDirDots}.${fileBasenameNoExtension}",
+        },
+        {
+            "name": "KotonebotDebug: Current Module",
+            "type": "debugpy",
+            "request": "launch",
+            "console": "integratedTerminal",
+            "module": "kotonebot.backend.debug.entry",
+            "args": ["${command:extension.commandvariable.file.relativeDirDots}.${fileBasenameNoExtension}"]
         }
     ]
 }
