feat(task): 工作奖励收取与分配

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 tests/output_images
 tests/output_images/*
 R.py
+kotonebot-ui/node_modules
+kotonebot-ui/.vite
 ##########################
 
 # Byte-compiled / optimized / DLL files
