feat(core): 新增保存图片调试数据到本地 & 可视调试器可从本地载入数据

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ tests/output_images/*
 R.py
 kotonebot-ui/node_modules
 kotonebot-ui/.vite
+dumps
 ##########################
 
 # Byte-compiled / optimized / DLL files
