feat(task): 调整部分延时 & 新增对进行中的竞赛的支持

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -32,6 +32,19 @@
                 "-c",
                 "${command:extension.commandvariable.file.relativeDirDots}.${fileBasenameNoExtension}"
             ]
+        },
+        {
+            "name": "KotonebotDebug: All tasks",
+            "type": "debugpy",
+            "request": "launch",
+            "console": "integratedTerminal",
+            "module": "kotonebot.backend.debug.entry",
+            "args": [
+                "-s",
+                "${workspaceFolder}/dumps",
+                "-c",
+                "kotonebot.run.run"
+            ]
         }
     ]
 }
