fix(task): 修复分配工作时寻找好调偶像偶尔失效的问题

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ tests/output_images/*
 R.py
 kotonebot-ui/node_modules
 kotonebot-ui/.vite
-dumps
+dumps*/
 ##########################
 
 # Byte-compiled / optimized / DLL files
