feat(*): 引入配置模块，将各脚本与配置模块整合

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ R.py
 kotonebot-ui/node_modules
 kotonebot-ui/.vite
 dumps*/
+config.json
 ##########################
 
 # Byte-compiled / optimized / DLL files
