feat(core): 调试保存图片去重 & 默认不允许重复初始化 Context

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -45,7 +45,9 @@
                 "-s",
                 "${workspaceFolder}/dumps",
                 "-c",
-                "kotonebot.run.run"
+                "kotonebot.run.run",
+                "-t",
+                "kotonebot.tasks.common.BaseConfig"
             ]
         }
     ]
