feat(core): 在非调试模式下自动记录错误信息并保存

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ kotonebot-ui/node_modules
 kotonebot-ui/.vite
 dumps*/
 config.json
+reports/
 ##########################
 
 # Byte-compiled / optimized / DLL files
