--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ kotonebot-ui/.vite
 dumps*/
 config.json
 reports/
+invoke.yml
+pyproject.toml
 ##########################
 
 # Byte-compiled / optimized / DLL files
