--- a/pyproject.template.toml
+++ b/pyproject.template.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "kaa"
-version = "0.1.0.250123"
+version = "<<<version>>>"
 description = "Kotones Auto Assistant"
 readme = "README.md"
 requires-python = ">=3.10"
