--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-# 图像处理 & OCR
+# Image Processing & OCR
 opencv-python==4.10.0.84
 rapidocr_onnxruntime==1.4.3
 av==14.0.1
 scikit-image==0.25.0
 thefuzz==0.22.1
-# Adb 控制
+# Adb Control
 adbutils==2.8.0
-# 可视化调试页面
+# Visual Debugger
 fastapi==0.115.6
 uvicorn==0.34.0
 python-multipart==0.0.20
@@ -15,7 +15,7 @@ numpy==2.2.1
 psutil==6.1.1
 # GUI
 gradio==5.12.0
-# 配置读写
+# Configuration
 pydantic==2.10.4
-# 其他
+# Other
 typing-extensions==4.12.2
