--- a/kotonebot-devtool/package.json
+++ b/kotonebot-devtool/package.json
@@ -15,12 +15,14 @@
     "@types/node": "^22.12.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "fabric": "^6.5.4",
     "immer": "^10.1.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.8",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
     "use-immer": "^0.11.0",
+    "uuid": "^11.0.5",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
