--- a/kotonebot-devtool/package.json
+++ b/kotonebot-devtool/package.json
@@ -13,11 +13,14 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@types/node": "^22.12.0",
+    "ace-builds": "^1.37.5",
+    "ace-code": "^1.37.5",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "fabric": "^6.5.4",
     "immer": "^10.1.1",
     "react": "^18.3.1",
+    "react-ace": "^13.0.0",
     "react-bootstrap": "^2.10.8",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
