chore: R.py 构建工具支持新图片类型

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ config.json
 reports/
 invoke.yml
 pyproject.toml
+tmp/
+res/sprites_compiled/
 ##########################
 
 # Byte-compiled / optimized / DLL files
