feat(core): 新增仅调试服务器运行模式

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -49,6 +49,14 @@
                 "-t",
                 "kotonebot.tasks.common.BaseConfig"
             ]
-        }
+        },
+        {
+            "name": "KotonebotDebug: Run Debug Server",
+            "type": "debugpy",
+            "request": "launch",
+            "console": "integratedTerminal",
+            "module": "kotonebot.backend.debug.server",
+            "args": []
+        },
     ]
 }
