--- a/kotonebot-devtool/package.json
+++ b/kotonebot-devtool/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^22.12.0",
     "ace-builds": "^1.37.5",
     "ace-code": "^1.37.5",
+    "ace-linters": "^1.4.1",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "fabric": "^6.5.4",
