feat(ui): UI 上新增更新日志 Tab

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ tests/output_images
 tests/output_images/*
 R.py
 kotonebot/tasks/sprites
+kotonebot/tasks/metadata.py
 kotonebot-ui/node_modules
 kotonebot-ui/.vite
 dumps*/
