--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,6 @@ dependencies = [
     "uvicorn==0.34.0",
     "python-multipart==0.0.20",
     "websockets==14.1",
-    "numpy==2.2.1",
     "psutil==6.1.1",
     # GUI
     "gradio==5.12.0",
@@ -33,7 +32,11 @@ dependencies = [
     "ksaa-res==0.1.0",
     # Other
     "typing-extensions==4.12.2",
-    "python-dotenv==1.0.1"
+    "python-dotenv==1.0.1",
+    # ImportError: DLL load failed while importing onnxruntime_pybind11_state
+    "onnxruntime==1.14.0",
+    # A module that was compiled using NumPy 1.x cannot be run in NumPy 2.0.0 as it may crash.
+    "numpy<2.0"
 ]
 
 
