--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,6 @@ fastapi==0.115.6
 uvicorn==0.34.0
 python-multipart==0.0.20
 websockets==14.1
-numpy==2.2.1
 psutil==6.1.1
 # GUI
 gradio==5.12.0
@@ -21,3 +20,7 @@ pydantic==2.10.4
 # Other
 typing-extensions==4.12.2
 python-dotenv==1.0.1
+# ImportError: DLL load failed while importing onnxruntime_pybind11_state
+onnxruntime==1.14.0
+# A module that was compiled using NumPy 1.x cannot be run in NumPy 2.0.0 as it may crash.
+numpy<2.0
