--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ dynamic = ["version"]
 name = "ksaa"
 description = "Kotones Auto Assistant(kaa) is a script for game 'Gakuen Idol M@ster' that automates the dailies and produces."
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = "~=3.10"
 dependencies = [
     # Image Processing & OCR
     "opencv-python==4.10.0.84",
@@ -36,7 +36,11 @@ dependencies = [
     # ImportError: DLL load failed while importing onnxruntime_pybind11_state
     "onnxruntime==1.14.0",
     # A module that was compiled using NumPy 1.x cannot be run in NumPy 2.0.0 as it may crash.
-    "numpy<2.0"
+    "numpy<2.0",
+    # For DMM version
+    # TODO: move these dependencies to optional-dependencies
+    "pywin32==310",
+    "ahk==1.8.3",
 ]
 
 
