chore: 修改 VSCode launch.json
“Python: Current Module”配置改用 kotonebot.debug_entry 模块

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,8 +18,13 @@
             "type": "python",
             "request": "launch",
             "console": "integratedTerminal",
-            "module": "${command:extension.commandvariable.file.relativeDirDots}.${fileBasenameNoExtension}",
+            "module": "kotonebot.debug_entry",
+            "args": [
+                "${relativeFile}"
+            ],
+            // "module": "${command:extension.commandvariable.file.relativeDirDots}.${fileBasenameNoExtension}",
         },
+        
         {
             "name": "KotonebotDebug: Current Module",
             "type": "debugpy",
