chore: 新增两个脚本用于从上游项目提取所需游戏资源文件

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ messages/
 logs/
 traces/
 version
+kotonebot/tasks/resources
 ##########################
 
 # Byte-compiled / optimized / DLL files
