--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -1,9 +1,21 @@
 -r requirements.txt
-jinja2==3.1.5
+# Packaging
 pyinstaller==6.11.1
 twine==6.1.0
-dataclasses-json==0.6.7
-python-lsp-server==1.12.0
-snakeviz==2.2.2
-wxpython==4.2.2
 build==1.2.2.post1
+
+# Profiling
+snakeviz==2.2.2
+
+# Used by kotonebot-devtool
+python-lsp-server==1.12.0
+wxpython==4.2.2
+
+# Make resources
+jinja2==3.1.5
+dataclasses-json==0.6.7
+
+# Extract game data
+PyYAML==6.0.2
+tqdm==4.67.1
+pypika==0.48.9
