--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,7 @@ dependencies = [
 package-dir = { "kotonebot" = "kotonebot" }
 
 [project.scripts]
-kaa = "kotonebot.tasks.main.cli:main"
+kaa = "kotonebot.kaa.main.cli:main"
 
 [tool.setuptools.dynamic]
 version = {file = "./version"}
