chore: VSCode 新增不初始化 context 的启动配置

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,6 +24,14 @@
             ],
             // "module": "${command:extension.commandvariable.file.relativeDirDots}.${fileBasenameNoExtension}",
         },
+
+        {
+            "name": "Python: Current Module(Without context)",
+            "type": "python",
+            "request": "launch",
+            "console": "integratedTerminal",
+            "module": "${command:extension.commandvariable.file.relativeDirDots}.${fileBasenameNoExtension}",
+        },
         
         {
             "name": "KotonebotDebug: Current Module",
