--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,5 @@
         "venv",
         "**/node_modules"
     ],
-    "python.analysis.diagnosticMode": "workspace"
+    // "python.analysis.diagnosticMode": "workspace"
 }
